--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -86,6 +86,7 @@ $spacing-20: 5rem;
 $spacing-24: 6rem;
 
 // Breakpoints
+$breakpoint-xs: 480px;
 $breakpoint-sm: 640px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 1024px;
